# blink

./: .gitignore  .gitmodules  BlinkToolbox.prj  LICENSE  README.md  buildfile.m  mkdocs.yml
.github/workflows/: ci.yml
cpp/: .bazelrc  .clang-tidy  BUILD.bazel  MODULE.bazel
cpp/include/: BlinkApp.hpp  HttpStatus.hpp  RequestParser.hpp  RouteMatcher.hpp  WebServer.hpp
cpp/mexfunctions/: serve.cpp
cpp/src/: BlinkApp.cpp  HttpStatus.cpp  RequestParser.cpp  RouteMatcher.cpp  WebServer.cpp
cpp/tests/: BUILD.bazel  test_blink_app.cpp  test_http_integration.cpp  test_http_status.cpp  test_request_parser.cpp  test_route_matcher.cpp
cpp/tools/: homebrew_clang_tidy.sh
docs/: api-reference.md  application.md  common-patterns.md  configuration.md  examples.md  features.md  getting-started.md  index.md  installation-guide.md  installation.md  patterns.md  quick-start.md  request.md  response.md  routing.md  security.md  stability.md  static-files.md  troubleshooting.md  tutorial.md
docs/specification/: body-uploads.md  config-lifecycle.md  execution-model.md  http-routing.md  index.md  middleware-errors.md  realtime-https.md  request-response.md  security.md
examples/: index.m  package-lock.json  package.json  start.m  tailwind.config.js
examples/hello/: index.m  start.m
examples/homepage/: .gitignore  buildfile.m  index.m  start.m
examples/homepage/src/: index.m
examples/homepage/templates/: home.mtl
examples/static/css/: main.css
examples/todo/: .gitignore  buildfile.m  start.m
examples/todo/src/: index.m
examples/todo/styles/: package-lock.json  package.json  tailwind.config.js
examples/todo/templates/: todo.mtl  todo.mustache  todoList.mtl  todoList.mustache
mex/internal/: BlinkApp.cpp  BlinkApp.hpp  CinchApp.cpp  CinchApp.h  CinchApp.hpp  RequestParser.cpp  RequestParser.h  parsing.cpp  parsing.hpp  serve.cpp
resources/project/4LQNbCVEzxgBC0_nPCw5E5y2Ua4/: TWeiQLed6wDT9FWaWeFLiBKonWUp.xml  YbWZhnE2_dy9PCXJumn7q7qYQewp.xml  pYUGg-G8X2r27WjygkKkoLrIGnkp.xml  zXisTfVSo_eIWEKplEv6IZpBzeAp.xml
resources/project/7AUKS6ws1w9S0NuyTmfPdTcglAQ/: 4LQNbCVEzxgBC0_nPCw5E5y2Ua4p.xml  Rb_IMtcWVSV_j-YlD-E0IPGfqiEp.xml
resources/project/ASofDLGVsPtT_Q61VmNvrTD7nhM/: CB5ipBc_lV0jISh28TU8V2pt6mwp.xml  E_Y8RfTnzrwsgccs30TE3tI5TXQp.xml  FYIygBgLkC5fW59lFbbbOsmh1Iop.xml  J3Jr4lXhWy-J5ZKwPn2MuYxGutEp.xml  TOmVMpVZHcQcn7NgLhxD8q-iiPwp.xml  ef4t7FAFEs6--57sXksg2cqleJQp.xml  laAo8O3f1qYfq5WBAaCi4Bq31Zcp.xml  oNoowf7sfnW_6k9fMVMnEiRji6Ip.xml
resources/project/CFKaf7YKwHdsPPwvW_vnk4ozl3Q/: sJDRliDQKG7vsxHLwlR8yRDnLRwp.xml
resources/project/CMItBuzj5J9NF7q9Lb69QboFYy0/: 90Z0bFpopDjUbELsAkPTX7zRplUp.xml  CIKhEfi6zl74Sf0I7gBo1euAEewp.xml  PzBdbLeHMdg68CuX1lf0ltLwHScp.xml  j1wYBsqCI6xYZq4IBEWfLylTuUcp.xml  y1HIhBxrr5rD-uifF29vN1-GW78p.xml
resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/: 32WkYFA74zWxfK2jPmKHjwFFlJwp.xml  IrGk_oo0uGuEHnaGWyyAP1N8ZhEp.xml  SzsvC1MHhCbjgZTyKiPiPjKJ6e0p.xml
resources/project/LUgSFhI3RPozNzNcutxrczVe6f0/: pRy2aEXysCeM-w11eX4CTiJocUUd.xml  pRy2aEXysCeM-w11eX4CTiJocUUp.xml
resources/project/NJLvHzdzusjBp8qLevegOTSO2HY/: -gznwDEifkunHf--X58F2vuPVYMp.xml
resources/project/NizPtpIBrP9tEbaSICE-iXmG228/: EIt1yq0Km6_BLDyLEnLa1dNDQOEp.xml  SVZGT1SkcxPiDMQEPPPUMPwL8SUp.xml  l43X94HfhrtDgqzT6SyGrptHTqcp.xml
resources/project/OfxnnyUcu5GSELEDRUyOXcMZW0c/: 7AUKS6ws1w9S0NuyTmfPdTcglAQp.xml  Er3e_Pa2I1IiqEgHxsppJJxtwC8p.xml  vd6W3g3FFKKM8Ug2SdCeeHe1OyQp.xml
resources/project/Pch6pRPxYjU92y7r_I6GT8ejCqE/: GI8p-75qZMnbeIvWXB4h5x4GZBkp.xml  LbqodA6jdGkkJmWP3h73N38Op-op.xml  bA-hnpX_R5tZQMu3XwmpNgfr2mMp.xml  bRwEMkDioDilO736ykCMORJ4KXAp.xml  d9NERexmvyqisb-MAJsZ5q-BwbYp.xml  m9t4PIERLPmXDKO5uLaMXjmiDowp.xml
resources/project/R6m7AxFfSX7StHtVJ9WG44h96GM/: jtKGxvKJEhy2unrjcdSyzL8dRdMp.xml
resources/project/Rb_IMtcWVSV_j-YlD-E0IPGfqiE/: 5z_fw3VfJMxat_u6WJdokKoQwmcp.xml  oLnXh5_QJRAImQHghUab7xiDGRkp.xml
resources/project/Ts_23VIOmtfFITYRiMQ9kEcybDw/: 6Q9wPd758zF73WZBF7v_V3vrXlMp.xml  DsEVnmRSTpFPIY2MyU7Iu8DvbBsp.xml  GpgmtHXf-NT6LBueIOKGPc5W-TEp.xml  gaNbgC0Sef3JTrOvUIuY0RRnW-sp.xml  hGalUZwjXT6F41gsBBxcvWnXo48p.xml
resources/project/_Go_VICvvGRlGiH2GVuofKcnJFE/: ZE-pkR31wk3pnFDd5EqS4Hh98oop.xml
resources/project/amOJWeChGnOvm0tpARm66vqqNhE/: cwS6MCTIrZn8qsHulHAgD1uUmmMp.xml
resources/project/byni5kxob51RvDiQZmCzJpho2lY/: tpvUI2-DcJF6Wc-6F3hBNSAhSjIp.xml
resources/project/gliiJtiPJzBaAXi7DJ3lrZlGQ04/: fHsn5MDLOCnE1lc3g_Wn8mnYGdIp.xml
resources/project/gzfJZWULrT94v8ivKSPEGYkTom4/: 1dSKkLeocb-NzC5Mbx3C9Y_4cxgp.xml  7kd-3uAW1iSEH48Nra8_e805w-Ap.xml  ZKfwuNmiEZ68-Ev0m28ibcS6Hf8p.xml  (+1 more)
src/+blink/: App.m  Response.m
src/cpp/: .bazelrc  BUILD.bazel  BUILD.uwebsockets  MODULE.bazel
src/cpp/include/: BlinkApp.hpp  HttpStatus.hpp  RequestParser.hpp  WebServer.hpp
src/cpp/src/: BlinkApp.cpp  RequestParser.cpp  WebServer.cpp
src/cpp/tests/: BUILD.bazel  test_blink_app.cpp  test_http_integration.cpp  test_request_parser.cpp
tests/: tApp.m  tBlink.m  tRequest.m  tResponse.m  tRoute.m
toolbox/: hello.m  index.m
toolbox/+blaze/: App.m
toolbox/+blink/: App.m  Config.m  Request.m  Response.m  Route.m
toolbox/+cinch/: App.m  HttpMethod.m  Request.m  Response.m  Route.m
(+42 files in other folders)
