load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "test_blink_app",
    srcs = ["test_blink_app.cpp"],
    deps = [
        "//:blink_app",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "test_request_parser",
    srcs = ["test_request_parser.cpp"],
    deps = [
        "//:blink_app",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "test_route_matcher",
    srcs = ["test_route_matcher.cpp"],
    deps = [
        "//:blink_app",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "test_http_status",
    srcs = ["test_http_status.cpp"],
    deps = [
        "//:blink_app",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "test_http_integration",
    srcs = ["test_http_integration.cpp"],
    deps = [
        "//:blink_app",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
    size = "medium",
    visibility = ["//visibility:public"],
)
