module(
    name = "blink_cpp",
    version = "1.0.0",
)

# Core Bazel rules
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "platforms", version = "1.0.0")

# uWebSockets dependencies
bazel_dep(name = "zlib", version = "1.3.1.bcr.6")

# Test dependencies
bazel_dep(name = "googletest", version = "1.17.0")

# Use a git override as the latest stable version of googletest does not support bazel 9.0.
git_override(
    module_name = "googletest",
    branch = "main",
    remote = "https://github.com/google/googletest.git",
)

# uWebSockets repository
git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
git_repository(
    name = "uwebsockets",
    remote = "https://github.com/uNetworking/uWebSockets.git",
    tag = "v20.74.0",
    recursive_init_submodules = True,
    build_file = "//:BUILD.uwebsockets",
)
